--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -15721,6 +15721,96 @@
 "~^/doc/silk$" "/doc/darknet-market/silk-road/index";
 "~^/sicp/chapter-1.3$" "/sicp/1-3";
 "~^/doc/www/www.historycooperative.org/.*.html/favicon.ico$" "https://www.historycooperative.org/favicon.ico";
+"~^/TWDNE.*$" "/twdne";
+"~^/doc/rotten.com/library/index.html[0-9].*$" "/doc/rotten.com/library/index.html";
+"~^/doc/nootropic/quantified-self/2018-05-17-gwern-bacopa$" "/doc/nootropic/quantified-self/2018-05-17-gwern-bacopa.csv";
+"~^/doc/.*/komm-susser-tod$" "/komm-susser-tod";
+"~^/doc/iq/1927-spearman-theabilitiesofman.pdfHorn.*$" "/doc/iq/1927-spearman-theabilitiesofman.pdf";
+"~^/doc/genetics/.*/culture/1963-asimov$" "/doc/culture/1963-asimov";
+"~^/TPB-Bitcoin\)-AND.*" "/tpb-bitcoin";
+"~^/Touhou%7C.*$" "/touhou";
+"~^/static/include/index$" "/static/index";
+"~^/static/img/favicon.png%22.*$" "/static/img/favicon.png";
+"~^/[Rr]adi.ance.*$" "/radiance";
+"~^/.*www.paulgraham.com/stuff.html$" "https://paulgraham.com/stuff.html";
+"~^/.*archive.animeigo.com/liner/out-print/battle-okinawa.html$" "https://archive.animeigo.com/liner/out-print/battle-okinawa.html";
+"~^/note/averta-demo-pe-regular.ff869689.otf$" "";
+"~^/.*/The-Existential-Risk-of-Mathematical-Error$" "/math-error";
+"~^/.*sethroberts.net/2011/01/29/the-buttermind-experiment/$" "https://quantifiedself.com/blog/results-of-the-buttermind-experiment/";
+"~^/.*www.edge.org/conversation/the-evolved-self-management-system$" "https://www.edge.org/conversation/the-evolved-self-management-system";
+"~^/.*/docs/eva/1997-animeland-may-hideakianno-interview-english$" "/doc/eva/1997-animeland-may-hideakianno-interview-english";
+"~^/newsletter/2013/%C3.*$" "/newsletter/2013/index";
+"~^/lizardman-constant$" "/note/lizardman";
+"~^/index_files/$" "/doc/index";
+"~^/img-site/$" "/doc/index";
+"~^/haskell/%C2.*$" "/haskell/index";
+"~^/fiction/.*/Lithium$" "/lithium";
+"~^/doc/www/www.protoculture.ca/35c5022d47f33232ad3177390fdcfb3c6a8fffde.html$" "";
+"~^/.*ssentialwellnessstore.*$" "/static/404";
+"~^/doc/touhou/%E5%BE%92.*$" "/doc/touhou/index";
+"~^/doc/statistics/culture/1963-asimov$" "/doc/culture/1963-asimov";
+"~^/doc/.*/Cat-Sense$" "/review/cat";
+"~^/doc/rotten.com/library/insult.*$" "/doc/rotten.com/library/language/insult/index.html";
+"~^/doc/rotten.com/library/index.html-[a-z].*$" "/doc/rotten.com/library/index.html";
+"~^/doc/.*/Ontological-pantheism$" "/ontological-pantheism";
+"~^/doc/.*/LSD-microdosing$" "/lsd-microdosing";
+"~^/doc/psychology/okcupid/thematem.*$" "/doc/psychology/okcupid/themathematicsofbeauty.html";
+"~^/doc/.*/1991-lykke$" "/doc/psychology/1991-lykken.pdf";
+"~^/doc/pIR.*$" "/doc/index";
+"~^/doc/nootropic/quantified-self/2018-%EF%BF%BD$" "/doc/nootropic/quantified-self/2018-hanley.pdf";
+"~^/doc/.*/Sunk-cost$" "/sunk-cost";
+"~^/doc/iq/high/smpy/2019-mcca$" "/doc/iq/high/smpy/2019-mccabe.pdf";
+"~^/doc/food/2022-goode\.\..*$" "/doc/food/2022-goodenough.pdf";
+"~^/doc/darknet-market/dnm-archive/index%2F.*$" "/doc/darknet-market/dnm-archive/index";
+"~^/doc/darknet-market/dnm-archive/index%29.*$" "/doc/darknet-market/dnm-archive/index";
+"~^/doc/darknet-market/agora/2015-02-%EF.*$" "/doc/darknet-market/agora/2015-02-22-agora-fremblingdocket.maff";
+"~^/doc/darknet-market/agora/2015-02-%C3.*$" "/doc/darknet-market/agora/2015-02-22-agora-fremblingdocket.maff";
+"~^/doc/cs/algorithm/ai/nn/transformer/gpt/fiction/index$" "/doc/ai/nn/transformer/gpt/fiction/index";
+"~^/doc/anime/eva/1996-n...anno-interview$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/ai/2021-nielsen\.pdf.*$" "/doc/ai/index";
+"~^/ab-test-indent/.*$" "/ab-test-indent";
+"~^/aunn/$" "/aunn";
+"~^/catitecture/$" "/catitecture";
+"~^/Culture-is-not$" "/culture";
+"~^/death-note-anonym$" "/death-note-anonymity";
+"~^/hello$" "/index";
+"~^/doc/cs/%C2%BF$" "/doc/cs/index";
+"~^/doc/sr/sr/2019-04-22-deepdotweb-dnmlist.html$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/psychology/spaced$" "/doc/psychology/spaced-repetition/index";
+"~^/doc/ads/index$" "/doc/economics/ads/index";
+"~^/doc/genetics/genetics/1983-feinberg\.pdf.*$" "/doc/genetics/1983-feinberg.pdf";
+"~^/doc/genetics/selection/artificial/index-selection/genetics/.*2004-dekkers\.pdf.*$" "/doc/genetics/selection/artificial/index-selection/2004-dekkers.pdf";
+"~^/imag/$" "/doc/index";
+"~^/doc/melatonin/W$" "/doc/melatonin/index";
+"~^/doc/2011-modapro200-front-pn.jpg$" "/doc/modafinil/2011-modapro200-front-pn.jpg";
+"~^/doc/modafinil/survey/2015-10-440$" "/doc/modafinil/survey/index";
+"~^/current_events_process.php_files/surveyresults_graph_byfoundation_dynamic.png$" "/doc/personal/2011-gwern-yourmorals.org/current_events_process.php_files/surveyresults_graph_byfoundation_dynamic.png";
+"~^/current_events_process.php_files/surveyresults_graph_byfoundation_dynamic_002.png$" "/doc/personal/2011-gwern-yourmorals.org/current_events_process.php_files/surveyresults_graph_byfoundation_dynamic_002.png";
+"~^/current_events_process.php_files/surveyresults_graph_byfoundation_dynamic_003.png$" "/doc/personal/2011-gwern-yourmorals.org/current_events_process.php_files/surveyresults_graph_byfoundation_dynamic_003.png";
+"~^/current_events_process.php_files/surveyresults_graph_byfoundation_dynamic_004.png$" "/doc/personal/2011-gwern-yourmorals.org/current_events_process.php_files/surveyresults_graph_byfoundation_dynamic_004.png";
+"~^/current_events_process.php_files/surveyresults_graph_byfoundation_dynamic_005.png$" "/doc/personal/2011-gwern-yourmorals.org/current_events_process.php_files/surveyresults_graph_byfoundation_dynamic_005.png";
+"~^/justice_process.php_files/surveyresults_graph_libcon.png$" "/doc/personal/2011-gwern-yourmorals.org/epbs2_process.php_files/surveyresults_graph_libcon.png";
+"~^/5f_new2_process.php_files/surveyresults_graph_libcon.png$" "/doc/personal/2011-gwern-yourmorals.org/epbs2_process.php_files/surveyresults_graph_libcon.png";
+"~^/schwartz_process.php_files/surveyresults_graph_libcon.png$" "/doc/personal/2011-gwern-yourmorals.org/epbs2_process.php_files/surveyresults_graph_libcon.png";
+"~^/gov_econ_process.php_files/surveyresults_graph_libertarians3.png$" "/doc/personal/2011-gwern-yourmorals.org/evalinfo_process.php_files/surveyresults_graph_libertarians3.png";
+"~^/rel_norms_process.php_files/surveyresults_graph_sex_bycondition.png$" "/doc/personal/2011-gwern-yourmorals.org/rel_norms_process.php_files/surveyresults_graph_sex_bycondition.png";
+"~^/rel_norms_process.php_files/surveyresults_graph_sex_bycondition_002.png$" "/doc/personal/2011-gwern-yourmorals.org/rel_norms_process.php_files/surveyresults_graph_sex_bycondition_002.png";
+"~^/schwartz_process.php_files/schwartz_graph.jpg$" "/doc/personal/2011-gwern-yourmorals.org/schwartz_process.php_files/schwartz_graph.jpg";
+"~^/doc/psychology/2023-gwern\.pdf.*$" "/doc/psychology/cognitive-bias/stereotype-threat/2021-warne.pdf";
+"~^/doc/psychology/okcnews.ycombinator.compid/whyyoushouldneverpayforonlinedating.html$" "/doc/psychology/okcupid/whyyoushouldneverpayforonlinedating.html";
+"~^/doc/reinforcement-learning/robot/%C3%B0$" "/doc/reinforcement-learning/robot/index";
+"~^/doc/technology/2014-%C2%BF$" "/doc/technology/2017-02-05-cms-ahistoryofimdbforums.html";
+"~^/doc/technology/feed$" "https://gwern.substack.com/feed";
+"~^/doc/www/replicationindex.wordpress.com/f1127b4b9e38a0fbfe7964520a7eb67f0c094ce7.html$" "/doc/www/replicationindex.com/f1127b4b9e38a0fbfe7964520a7eb67f0c094ce7.html";
+"~^/doc/bitcoin/2008-nakamotoWei$" "/docs/bitcoin/2008-nakamoto";
+"~^/IMG/$" "/images/";
+"~^/Images/$" "/images/";
+"~^/utext/$" "/utext";
+"~^/newsletter/2020/11\;1$" "/newsletter/2020/12";
+"~^/nota/$" "/note/notes";
+"~^/Notex$" "/notes/notes";
+"~^/sidenote/$" "/sidenote";
+"~^/suzanne-delage/$" "/suzanne-delage";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
