--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -10733,3 +10733,22 @@ default "";
 "~^/doc/sociology/2023-yang-3-figure3-funnelplot.png.*$" "/doc/sociology/2023-yang-3-figure3-funnelplot.jpg";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-21-gwern-midjourneyv5-dropcat-uppercasecapitallettertcursiveitalic.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-21-gwern-midjourneyv5-dropcat-uppercasecapitallettertcursiveitalic.jpg";
 "~/doc/www/openarchive.ki.se/0f825aa17f149f78075ea84cdc5e03864d6b97b8.*$" "/doc/crime/2014-latvala.pdf";
+"~^/doc/statistics/bias/2021-kasy.pdf.*$" "/doc/statistics/bias/publication/2021-kasy.pdf";
+"~^/doc/statistics/bias/2008-gerber.pdf.*$" "/doc/statistics/bias/publication/2008-gerber.pdf";
+"~^/doc/statistics/bias/2023-maier.pdf.*$" "/doc/statistics/bias/publication/2023-maier.pdf";
+"~^/doc/statistics/bias/1959-sterling.pdf.*$" "/doc/statistics/bias/publication/1959-sterling.pdf";
+"~^/doc/statistics/bias/1960-maier.pdf.*$" "/doc/statistics/bias/publication/1960-maier.pdf";
+"~^/doc/statistics/bias/1966-dunnette.pdf.*$" "/doc/statistics/bias/publication/1966-dunnette.pdf";
+"~^/doc/statistics/peer-review/1976-johnson.pdf.*$" "/1976-johnson.pdf";
+"~^/1976-johnson.pdf.*$" "/doc/statistics/bias/publication/1976-johnson.pdf";
+"~^/doc/statistics/bias/2014-franco.pdf.*$" "/doc/statistics/bias/publication/2014-franco.pdf";
+"~^/doc/statistics/bias/2008-scherer.pdf.*$" "/doc/statistics/bias/publication/2008-scherer.pdf";
+"~^/doc/statistics/bias/2005-jussim.pdf.*$" "/doc/statistics/bias/publication/2005-jussim.pdf";
+"~^/doc/statistics/bias/1998-vickers.pdf.*$" "/doc/statistics/bias/publication/1998-vickers.pdf";
+"~^/doc/statistics/bias/1995-sterling.pdf.*$" "/doc/statistics/bias/publication/1995-sterling.pdf";
+"~^/doc/statistics/bias/2022-georgiou.pdf.*$" "/doc/statistics/bias/animal/2022-georgiou.pdf";
+"~^/doc/statistics/bias/2021-lishner.pdf.*$" "/doc/statistics/bias/publication/2021-lishner.pdf";
+"~^/doc/statistics/bias/2018-devries.pdf.*$" "/doc/statistics/bias/publication/2018-devries.pdf";
+"~^/doc/statistics/bias/2016-lane.pdf.*$" "/doc/statistics/bias/publication/2016-lane.pdf";
+"~^/doc/statistics/bias/2016-pica.pdf.*$" "/doc/statistics/bias/publication/2016-pica.pdf";
+"~^/doc/statistics/bias/2015-franco.pdf.*$" "/doc/statistics/bias/publication/2015-franco.pdf";
