--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -15811,6 +15811,7 @@
 "~^/Notex$" "/notes/notes";
 "~^/sidenote/$" "/sidenote";
 "~^/suzanne-delage/$" "/suzanne-delage";
+"~^/image/psychology/2022-dona-figure2-bumblebeeballrollingvideosnapshots.*$" "/doc/psychology/2022-dona-figure2-bumblebeeballrollingvideosnapshots3x3.jpg";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
