--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -15812,6 +15812,76 @@
 "~^/sidenote/$" "/sidenote";
 "~^/suzanne-delage/$" "/suzanne-delage";
 "~^/image/psychology/2022-dona-figure2-bumblebeeballrollingvideosnapshots.*$" "/doc/psychology/2022-dona-figure2-bumblebeeballrollingvideosnapshots3x3.jpg";
+"~^/.*/Hybrid-Rainbow$" "/fiction/hybrid-rainbow";
+"~^/doc/rotten.*/1994-falk$" "/doc/statistics/bayes/1994-falk";
+"~^/doc/iq/1971-seemaZa.*$" "/doc/iq/1971-seemanova.pdf";
+"~^/The-Buddhas.*$" "/fiction/the-buddhas-wheel";
+"~^/static/js/extract.js$" "/static/js/extracts.js";
+"~^/static/img/icon/message-slash-regular.svg$" "/static/img/icon/eye-slash-regular.svg";
+"~^/static/font/dropcap/ninit/light/C-abstract-2.png$" "/static/font/dropcap/ninit/light/C-abstract-light-2.png";
+"~^/static/font/dropcap/ninit/light/B-mechanical-1.png$" "/static/font/dropcap/ninit/light/B-mechanical-light-1.png";
+"~^/static/font/dropcap/ninit/dark/B-mechanical-2.png$" "/static/font/dropcap/dropcat/light/B-light-2.png";
+"~^/static/font/dropcap/gene-wolfe/dark/V-36.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-36.svg";
+"~^/static/font/dropcap/dropcat/dark/G-2.svg$" "/static/font/dropcap/dropcat/dark/G-dark-2.svg";
+"~^/static/css/include/$" "/static/css/include/index";
+"~^/SlowingMoore.*$" "/slowing-moores-law";
+"~^/.*/Turing-complete$" "/turing-complete";
+"~^/.*/Cloud-Nine$" "/fiction/cloud-nine";
+"~^/men-of-Iron.*$" "/fiction/men-of-iron";
+"~^/LSD-microdosing-.*$" "/lsd-microdosing";
+"~^/doc/traffic/2010-wa.*$" "/doc/traffic/2010-gwern-gwernnet-nfsncosts.maff";
+"~^/doc/tea/2002-finsterer.pdf:.*$" "/doc/tea/2002-finsterer.pdf";
+"~^/doc/statistics/order/beanmachine-multistage/index.%E2%80%8Bhtml$" "/doc/statistics/order/beanmachine-multistage/index.html";
+"~^/doc/modafinil/survey/2015-1$" "/doc/modafinil/survey/index";
+"~^/doc/iq/Image.*$" "/doc/qi/index";
+"~^/doc/iq/1994-jensen-2.pdf;.*$" "/doc/iq/1994-jensen-2.pdf";
+"~^/doc/genetics/.*/cryonics$" "/cryonics";
+"~^/doc/genetics/heritable/zimen\.pdf.*$" "/doc/genetics/heritable/dog/1987-zimen.pdf";
+"~^/doc/genetics/heritable/1986-plomin-thestudyoftemperamen6.*$" "/doc/genetics/heritable/1986-plomin-thestudyoftemperament.pdf";
+"~^/doc/D7.*$" "/doc/index";
+"~^/doc/cs/algorithm/ai/nn/transformer/gpt/poetry/index$" "/doc/ai/nn/transformer/gpt/poetry/index";
+"~^/doc/biology/2000GP.*$" "/doc/biology/index";
+"~^/doc/biology/1929-li$" "/doc/biology/1929-lieb.pdf";
+"~^/doc/anime/1993-anno-charscounterattackfanclubbook-khodazat$" "/doc/anime/1993-anno-charscounterattackfanclubbook-khodazattranslation.pdf";
+"~^/doc/ai/poetry/fD.*$" "/doc/ai/poetry/index";
+"~^/Lit$" "/lithium";
+"~^/Bitcoin-is-Worse$" "/bitcoin-is-worse-is-better";
+"~^/doc/anime/danbooru2019-sfw512px-torrent.tar.xs$" "/doc/anime/danbooru2019-sfw512px-torrent.tar.xz";
+"~^/doc/statistics/1996-teahan\.pdf.*$" "/doc/cs/algorithm/information/compression/1996-teahan.pdf";
+"~^/doc/cs/2004-ryannorth-dinosaurcomics-391.png$" "/doc/cs/algorithm/information/compression/2004-ryannorth-dinosaurcomics-391.png";
+"~^/doc/cs/tae$" "/doc/cs/index";
+"~^/doc/sr/2019-04-22$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/darknet-market/2019-04-22-deepdotweb-dmnlis.html$" "/doc/darknet-market/2019-04-22-deepdotweb-dnmlist.html";
+"~^/doc/sr/2015-interpol-pharmaceuticals$" "/doc/darknet-markets/2015-interpol-pharmaceuticals.pdf";
+"~^/darknet-markets/silk-road$" "/doc/darknet-markets/silk-road/index";
+"~^/doc/2012-carretti\.pdf.*$" "/doc/dual-n-back/2012-carretti.pdf";
+"~^/doc/economics/2002-allen\.pdf.*$" "/doc/economics/mechanism-design/2002-allen.pdf";
+"~^/doc/fiction/humor/dinosaur-comics/gwern-x-x-y\=1.png$" "/doc/fiction/humor/dinosaur-comics/gwern-xminusxminusyequals1.png";
+"~^/doc/genetics/2005-thomas\.pdf.*$" "/doc/genetics/heritable/2005-thomas.pdf";
+"~^/doc/genetics/index.rss$" "/doc/genetics/index";
+"~^/doc/genetics/selection/2013-anonymous-strategicconsequencesofchineseracism$" "/doc/genetics/selection/artificial/2013-anonymous-strategicconsequencesofchineseracism.pdf";
+"~^/doc/b$" "/doc/₿/index";
+"~^/doc/2010-repantis\.pdf.*$" "/doc/modafinil/2010-repantis.pdf";
+"~^/doc/psychology/2020-eskreiswinkler\.pdf.*$" "/doc/psychology/cognitive-bias/2020-eskreiswinkler.pdf";
+"~^/doc/psychology/2001-lynn\.pdf.*$" "/doc/psychology/personality/2001-lynn.pdf";
+"~^/doc/rotten.com/libary$" "/doc/rotten.com/library/index.html";
+"~^/doc/sociology/2020-kessel\.pdf.*$" "/doc/sociology/technology/2020-kessel.pdf";
+"~^/doc/statistics/bias/1960-maier\.pdf.*$" "/doc/statistics/bias/publication/1960-maier.pdf";
+"~^/doc/statistics/bias/1966-dunnette\.pdf.*$" "/doc/statistics/bias/publication/1966-dunnette.pdf";
+"~^/doc/statistics/peer-review/1976-johnson\.pdf.*$" "/doc/statistics/bias/publication/1976-johnson.pdf";
+"~^/doc/statistics/bias/1995-sterling\.pdf.*$" "/doc/statistics/bias/publication/1995-sterling.pdf";
+"~^/doc/statistics/bias/2016-pica\.pdf.*$" "/doc/statistics/bias/publication/2016-pica.pdf";
+"~^/Hafu/index.html$" "/hafu";
+"~^/doc/about/index.html$" "/doc/index";
+"~^/doc/personal/2015-11-harvard-innovationlabs-bestreviews-evolutionofthedesk-vi.jpg$" "/doc/technology/2015-11-harvard-innovationlabs-bestreviews-evolutionofthedesk-vi.jpg";
+"~^/ipx/.*$" "/static/404";
+"~^/cGpB.*$" "/gpt-3";
+"~^/languages/.*$" "/language";
+"~^/sicp/0$" "/sicp/index";
+"~^/The-%C3%B0$" "/index";
+"~^/doc/longevity/2019-fahy.*$" "/doc/longevity/epigenetics/2019-fahy.pdf";
+"~^/lorem-transcludes.*$" "/lorem-transclude";
+"~^/lorem-include.*$" "/lorem-transclude";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
