--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -929,6 +929,8 @@ server {
         rewrite ^/tutorial/(?<original>.*)$ /doc/tutorial/$original permanent;
         rewrite ^/vitamin-d/(?<original>.*)$ /doc/vitamin-d/$original permanent;
         rewrite ^/wikipedia/(?<original>.*)$ /doc/wikipedia/$original permanent;
+        rewrite ^/wiki/(?<original>.*)$ /$original permanent;
+        rewrite ^/home/gwern/wiki/(?<original>.*)$ /$original permanent;
         rewrite ^/www/(?<original>.*)$ /doc/www/$original permanent;
         rewrite ^/doc/www/nitter.moomoo.me/(?<original>.*)$ /doc/www/nitter.net/$original permanent;
         rewrite ^/doc/www/nitter.net/(?<original>.*)$ /doc/www/localhost/$original permanent;
