--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -10642,7 +10642,7 @@
 "~^/static/js/image-focus.js.html.html$" "/static/js/image-focus.js.html";
 "~^/static/plugins/Interwiki.hs$" "/static/build/Interwiki.hs";
 "~^/Statistical-notes\?ref=labnotes.org$" "/note/statistics";
-"~^/sunk$" "/sunk-costs";
+"~^/sunk$" "/sunk-cost";
 "~^/Tanks\?ref=cold-takes$" "/tank";
 "~^/Tanks\?ref=cold-takes.com$" "/tank";
 "~^/Tanks\?ref=labnotes.org$" "/tank";
@@ -15074,7 +15074,7 @@
 "~^/doc/rotten.com/library/death/e$" "/doc/rotten.com/library/death/execution/index.html";
 "~^/doc/.*/Dinosaur-Comics$" "/fiction/dinosaur-comics";
 "~^/doc/.*/Chapter-1.1$" "/sicp/chapter-1-1";
-"~^/doc/psychology/personality/psychopathy/narcissism/index$" "";
+"~^/doc/psychology/personality/psychopathy/narcissism/index$" "/doc/psychology/personality/narcissism/index";
 "~^/doc/psychology/2020-6vS.*$" "/doc/psychology/index";
 "~^/doc/psychology/1949-hovland$" "/doc/psychology/1949-hovland-theamericansoldier-v3-experimentsonmasscommunication.pdf";
 "~^/doc/philosophy/mind/2004-1$" "/doc/philosophy/mind/index";
@@ -15309,7 +15309,7 @@
 "~^/doc/2011-gwern-yourmorals.org/logicb_process.php_files/$" "/doc/personal/2011-gwern-yourmorals.org/logicb_process.html";
 "~^/doc/1999-bradbury$" "/doc/ai/scaling/hardware/1999-bradbury-matrioshkabrains.pdf";
 "~^/DNM-arrestsbimel.*" "/dnm-arrests";
-"~^/Danbooru2020-SFW-512x512px-version$" "";
+"~^/Danbooru2020-SFW-512x512px-version$" "/danbooru2020";
 "~^/compress/mathematiciansmi033496mbp$" "https://archive.org/details/mathematiciansmi033496mbp/page/n111";
 "~^/An$" "/abortion-dialogue";
 "~^/ads.page$" "/banner.page";
@@ -15639,7 +15639,7 @@
 "~^/.*/docs/eva/1997-animeland-may-hideakianno-interview-french$" "/doc/eva/1997-animeland-may-hideakianno-interview-french";
 "~^/doc/science/%EF.*$" "/doc/science/index";
 "~^/doc/biology/Jackson.*$" "/doc/biology/index";
-"~^/doc/ai/2020-openai-gpt-3/Gpt-3.5-turing-interraction\.pdf.*$" "";
+"~^/doc/ai/2020-openai-gpt-3/Gpt-3.5-turing-interraction\.pdf.*$" "/doc/ai/nn/transformer/gpt/3/index";
 "~^/japanese/2002-gibson$" "/doc/japan/art/2002-gibson";
 "~^/haskell/Google-Sum-mer-of-Code$" "/haskell/summer-of-code";
 "~^/GAN---Nvidia-StyleGAN-Playground$" "/face";
@@ -15734,7 +15734,7 @@
 "~^/[Rr]adi.ance.*$" "/radiance";
 "~^/.*www.paulgraham.com/stuff.html$" "https://paulgraham.com/stuff.html";
 "~^/.*archive.animeigo.com/liner/out-print/battle-okinawa.html$" "https://archive.animeigo.com/liner/out-print/battle-okinawa.html";
-"~^/note/averta-demo-pe-regular.ff869689.otf$" "";
+"~^/note/averta-demo-pe-regular.ff869689.otf$" "/static/404";
 "~^/.*/The-Existential-Risk-of-Mathematical-Error$" "/math-error";
 "~^/.*sethroberts.net/2011/01/29/the-buttermind-experiment/$" "https://quantifiedself.com/blog/results-of-the-buttermind-experiment/";
 "~^/.*www.edge.org/conversation/the-evolved-self-management-system$" "https://www.edge.org/conversation/the-evolved-self-management-system";
@@ -15745,7 +15745,7 @@
 "~^/img-site/$" "/doc/index";
 "~^/haskell/%C2.*$" "/haskell/index";
 "~^/fiction/.*/Lithium$" "/lithium";
-"~^/doc/www/www.protoculture.ca/35c5022d47f33232ad3177390fdcfb3c6a8fffde.html$" "";
+"~^/doc/www/www.protoculture.ca/35c5022d47f33232ad3177390fdcfb3c6a8fffde.html$" "/doc/anime/eva/1996-protocultureaddicts-41-editorial.html";
 "~^/.*ssentialwellnessstore.*$" "/static/404";
 "~^/doc/touhou/%E5%BE%92.*$" "/doc/touhou/index";
 "~^/doc/statistics/culture/1963-asimov$" "/doc/culture/1963-asimov";
@@ -15882,6 +15882,87 @@
 "~^/doc/longevity/2019-fahy.*$" "/doc/longevity/epigenetics/2019-fahy.pdf";
 "~^/lorem-transcludes.*$" "/lorem-transclude";
 "~^/lorem-include.*$" "/lorem-transclude";
+"~^/doc/statistics/decision/2022-glimcher.pd.a.*$" "/doc/statistics/decision/2022-glimcher.pdf";
+"~^/doc/.*Men-of-Iron$" "/fiction/men-of-iron";
+"~^/doc/music/music-distraction/1999-furnham-2$" "/doc/music/music-distraction/1999-furnham-2.pdf";
+"~^/doc/2011-june-mulberry-branch-frontal.jpg$" "/doc/personal/mulberry-tree/2011-gwern-june-branch-frontal.jpg";
+"~^/doc/2012-fu\.pdf.*$" "/doc/genetics/selection/natural/human/2012-fu.pdf";
+"~^/G\(2$" "/gpt-2";
+"~^/doc/algenon/2006-harris\.pdf.*$" "/doc/psychology/personality/psychopathy/2006-harris.pdf";
+"~^/fiction/Men$" "/fiction/men-of-iron";
+"~^/doc/history/1963-deroover-theriseanddeclineofthe$" "/doc/history/medici/1963-deroover-theriseanddeclineofthemedicibank.pdf";
+"~^/AI-efficiency$" "https://openai.com/research/ai-and-efficiency";
+"~^/ttps://gwern.net/idea$" "/idea";
+"~^/static/include/inlined-asset-versions.html$" "/static/include/inlined-asset-links.html";
+"~^/static/img/icon/divider-filetarabesque-half.svg$" "/static/img/ornament/sequential-nav-icons-arabesque.svg";
+"~^/static/font/dropcap/ninit/dark/C-artdeco-3.png$" "/static/font/dropcap/ninit/dark/C-artdeco-dark-3.png";
+"~^/static/font/dropcap/gene-wolfe/light/V-18.svg$" "/static/font/dropcap/gene-wolfe/light/V-light-18.svg";
+"~^/static/font/dropcap/dropcat/light/T-6.svg$" "/static/font/dropcap/dropcat/light/T-light-6.svg";
+"~^/hideaki-anno-interview$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/fiction/darkmode.js$" "/static/js/dark-mode.js";
+"~^/doc/statistics/decision/2016-0$" "/doc/statistics/decision/2016-08-20-candyjapan-decisiontree-n9.csv";
+"~^/doc/.*/About$" "/about";
+"~^/doc/rotten.com/library/conspiracy/majestic-12/index$" "/doc/rotten.com/library/conspiracy/majestic-12/index.html";
+"~^/doc/rotten.*/2013-power$" "/doc/darknet-market/silk-road/1/2013-power";
+"~^/doc/rotten.*/pablo-escobar/index$" "/doc/rotten.com/library/bio/crime/criminals/pablo-escobar/index.html";
+"~^/doc/nootropics/2010-46$" "/doc/nootropic/2010-finke.pdf";
+"~^/doc/nootropic/%EF%BF.*$" "/doc/nootropic/index";
+"~^/doc/modafinil/2008-minzenber$" "/doc/modafinil/2008-minzenberg.pdf";
+"~^/doc/modafinil/1994-de-s%FF.*$" "/doc/modafinil/1994-desereville.pdf";
+"~^/doc/.*/TWDNE$" "/twdne";
+"~^/doc/japan/2004-garofalo-theha$" "/doc/japan/poetry/2004-garofalo-thehaikuandpoemsofikkyu.html";
+"~^/doc/iq-selection-eggcurve.png$" "/doc/genetics/selection/gwern-iq-selection-eggcurve.png";
+"~^/doc/iq/1992-shur$" "/doc/iq/high/1992-shurkin-termanskids.pdf";
+"~^/doc/history/%C2%BF.*$" "/doc/history/index";
+"~^/doc/.*/cs/1955-nash$" "/doc/cs/cryptography/nash/1955-nash";
+"~^/doc/darknet-market/2017-zvonka-datacollectionandanalysisfromrussiananonymousmarketplaces-ramp_html.*$" "/doc/darknet-market/2017-zvonka-datacollectionandanalysisfromrussiananonymousmarketplaces-ramp.docx.html";
+"~^/doc/cs/2010-nordhaus-nordhaus2007twocenturiesofproductivitygrowthincomputing-appendix_html_.*$" "/doc/cs/2010-nordhaus-nordhaus2007twocenturiesofproductivitygrowthincomputing-appendix.xlsx.html";
+"~^/doc/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.htmllo.*$" "/doc/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html";
+"~^/doc/cat/psychology/journal.*$" "/doc/cat/psychology/index";
+"~^/doc/ai/poetry/2019-12-16-gpt21.57d.*$" "/doc/ai/poetry/2019-12-16-gpt21.5b-poetry-samples-topp080.txt";
+"~^/pdf$" "/doc/index";
+"~^/doc/ai/2021-gwern-meme-virginvschad-journalpapervsblogpost.png$" "/doc/ai/2021-anonymous-meme-virginvschad-journalpapervsblogpost.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-12-gwern-midjourneyv5-blacksun.png$" "/doc/ai/nn/diffusion/midjourney/black-sun/2023-10-12-gwern-midjourneyv5-blacksun.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-c-dark-2-8-cropped.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-15-gwern-midjourneyv5-cats-c-dark-2-8-cropped.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-t-light-01.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/genewolfe-dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-t-light-01.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-t-light-02.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/genewolfe-dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-t-light-02.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-t-light-04.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/genewolfe-dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-t-light-04.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-t-light-05.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/genewolfe-dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-t-light-05.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-t-light-10.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/genewolfe-dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-t-light-10.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-12-gwern-midjourneyv5-floral-samples-1.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/ninit/2023-10-12-gwern-midjourneyv5-floral-samples-1.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-14-gwern-midjourneyv5-awoodblockprintofacaliforniacoastalfire-studies-1.png$" "/doc/ai/nn/diffusion/midjourney/landscape/2023-10-14-gwern-midjourneyv5-awoodblockprintofacaliforniacoastalfire-studies-1.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-14-gwern-midjourneyv5-awoodblockprintofacaliforniacoastalfire-studies-2.png$" "/doc/ai/nn/diffusion/midjourney/landscape/2023-10-14-gwern-midjourneyv5-awoodblockprintofacaliforniacoastalfire-studies-2.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-14-gwern-midjourneyv5-awoodblockprintofacaliforniacoastalfire-studies-3.png$" "/doc/ai/nn/diffusion/midjourney/landscape/2023-10-14-gwern-midjourneyv5-awoodblockprintofacaliforniacoastalfire-studies-3.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-14-gwern-midjourneyv5-moonlitpaintingofajapanesebeachbytsuchiyakoitsu.png$" "/doc/ai/nn/diffusion/midjourney/landscape/2023-10-14-gwern-midjourneyv5-moonlitpaintingofajapanesebeachbytsuchiyakoitsu.jpg";
+"~^/doc/anime/anime/2017-girlslasttour-horriblesubs480p-ep05-thesoundofrain.mp4$" "/doc/anime/2017-girlslasttour-horriblesubs480p-ep05-thesoundofrain.mp4";
+"~^/doc/anime/anime/2018-02-18-popteamepic-s1e7-hellshakeyano.mp4$" "/doc/anime/2018-02-18-popteamepic-s1e7-hellshakeyano.mp4";
+"~^/doc/anime/eva/1996-n$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/biology/abt_sun.html$" "/doc/biology/2000-iapac-norvir/abt_sun.html";
+"~^/doc/biology/adherence.html$" "/doc/biology/2000-iapac-norvir/adherence.html";
+"~^/doc/sr/sr/2014-04-19-deepdotweb-1776announcement.html$" "/doc/darknet-market/2014-04-19-deepdotweb-1776announcement.html";
+"~^/doc/genetics/genetics/1985-yanischperron\.pdf.*$" "/doc/genetics/1985-yanischperron.pdf";
+"~^/doc/81.*$" "/doc/index";
+"~^/doc/2012-sugden\.pdf.*$" "/doc/modafinil/2012-sugden.pdf";
+"~^/doc/nootropic/quantified-self/2015-%EF%BF%BD$" "/doc/nootropic/quantified-self/index";
+"~^/doc/psychology/2006-02-05-1$" "/doc/psychology/2006-02-05-nytimes-thatwhichdoesnotkillmemakesmestranger.html";
+"~^/doc/sociology/2014-%C3%B0$" "/doc/psychology/index";
+"~^/Choosing-Software.*$" "/choosing-software";
+"~^/Embryo/-selection$" "/embryo-selection";
+"~^/Ethical-sperm-d-onation$" "/ethical-sperm-donation";
+"~^/GPT-3%7C4$" "/gpt-3";
+"~^/The-3-%C2%BF$" "/3-grenades";
+"~^/indext$" "/index";
+"~^/Predic$" "/prediction";
+"~^/.*/Faces$" "/face";
+"~^/modafinii$" "/modafinil";
+"~^/tutorial$" "/doc/tutorial/index";
+"~^/Ought$" "https://ought.org/";
+"~^/otaku%7C4$" "/otaku";
+"~^/Self-decrypting-les$" "/self-decrypting-file";
+"~^/static/js/favicon.ico$" "/static/img/favicon.ico";
+"~^/Sunk$" "/sunk-cost";
+"~^/fCSa$" "/tags/CS";
+"~^/best-anime-movies$" "https://myanimelist.net/animelist/gwern?order=4&order2=-6&status=2";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
@@ -19707,7 +19788,6 @@
 "~^/widget/.*$" "/static/404";
 "~^/widgets/.*$" "/static/404";
 "~^/widgets/widgetsasjson/.*$" "/static/404";
-"~^/wiki/.*$" "/static/404";
 "~^/window.DOM.*$" "/static/404";
 "~^/window.load.*$" "/static/404";
 "~^/wishlist.*$" "/static/404";
@@ -21734,6 +21814,7 @@
 "~^/.*/admin\.asp.*$" "/static/404";
 "~^/.*/index\.asp.*$" "/static/404";
 "~^/.*/Urban/min/.*$" "/static/404";
+"~^/[vV]agrant.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
