--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11241,3 +11241,6 @@ default "";
 "~^/doc/ai/nn/gan/stylegan/2022-endo.pdf.*$" "/doc/ai/nn/gan/stylegan/anime/2022-endo.pdf";
 "~^/doc/ai/anime/2022-ko-2.pdf.*$" "/doc/ai/nn/gan/stylegan/anime/2022-ko-2.pdf";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-c-dark-2-8-cropped.jpg.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-15-gwern-midjourneyv5-cats-c-dark-2-8-cropped.jpg";
+"~^/doc/ai/nn/transformer/gpt/2020-07-19-oceaninthemiddleofanisland-gpt3-chinesepoetrytranslation.png.*$" "/doc/ai/nn/transformer/gpt/3/poetry/2020-07-19-oceaninthemiddleofanisland-gpt3-chinesepoetrytranslation.png";
+"~^/doc/ai/nn/transformer/gpt/2020-nadeem-figure1-gpt2samplingqualityvsdiversity.png.*$" "/doc/ai/nn/transformer/gpt/2/2020-nadeem-figure1-gpt2samplingqualityvsdiversity.png";
+"~^/doc/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html.*$" "/doc/cs/security/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html";
